Moved authors docs to jsdocs
