# src/docs/openapi.yaml
@@ -36,204 +36,6 @@ paths:
                   status:
                     type: string
                     example: "OK"
-  /authors:
-    post:
-      security:
-        - bearerAuth: []
-      tags:
-        - Authors
-      summary: Create author (Admin only)
-      description: Adds a new author.
-      requestBody:
-        content:
-          application/json:
-            schema:
-              required:
-                - firstName
-                - lastName
-                - genres
-              properties:
-                firstName:
-                  type: string
-                lastName:
-                  type: string
-                genres:
-                  type: array
-                  minItems: 1
-                  items:
-                    type: string
-      responses:
-        201:
-          description: Author created successfully.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Author"
-        400:
-          $ref: "#/components/responses/400"
-        401:
-          $ref: "#/components/responses/401"
-        403:
-          $ref: "#/components/responses/403"
-        422:
-          description: Unprocessable Entity
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-              examples:
-                authorExists:
-                  value:
-                    code: ckgjkxvgl000431pp4xlpew2g
-                    name: Unprocessable Entity
-                    message: Your request was understood but could not be completed due to semantic errors
-                    details: An author with the same name already exists
-                  summary: Author exists
-        500:
-          $ref: "#/components/responses/500"
-    get:
-      security:
-        - bearerAuth: []
-      tags:
-        - Authors
-      summary: Read authors
-      description: Reads authors. Supports search by genre and projected responses.
-      parameters:
-        - name: genre
-          in: query
-          description: Genre
-          schema:
-            type: string
-          example: "dystopian_fiction"
-        - name: fields
-          in: query
-          description: Projected fields
-          schema:
-            type: string
-          example: "firstName,lastName,genres"
-      responses:
-        200:
-          description: Authors read successfully.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Author"
-        400:
-          $ref: "#/components/responses/400"
-        401:
-          $ref: "#/components/responses/401"
-        500:
-          $ref: "#/components/responses/500"
-  /authors/{id}:
-    get:
-      security:
-        - bearerAuth: []
-      tags:
-        - Authors
-      summary: Read one author
-      description: Reads one author by Id.
-      parameters:
-        - name: id
-          in: path
-          description: Author Id
-          schema:
-            type: string
-          required: true
-      responses:
-        200:
-          description: Author read successfully.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Author"
-        401:
-          $ref: "#/components/responses/401"
-        404:
-          $ref: "#/components/responses/404"
-        500:
-          $ref: "#/components/responses/500"
-    patch:
-      security:
-        - bearerAuth: []
-      tags:
-        - Authors
-      summary: Update author (Admin only)
-      description: Updates an existing author.
-      parameters:
-        - name: id
-          in: path
-          description: Author Id
-          schema:
-            type: string
-          required: true
-      requestBody:
-        content:
-          application/json:
-            schema:
-              properties:
-                firstName:
-                  type: string
-                lastName:
-                  type: string
-                genres:
-                  type: array
-                  minItems: 1
-                  items:
-                    type: string
-      responses:
-        204:
-          description: Author updated successfully.
-        400:
-          $ref: "#/components/responses/400"
-        401:
-          $ref: "#/components/responses/401"
-        403:
-          $ref: "#/components/responses/403"
-        404:
-          $ref: "#/components/responses/404"
-        422:
-          description: Unprocessable Entity
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-              examples:
-                authorExists:
-                  value:
-                    code: ckgjkxvgl000431pp4xlpew2g
-                    name: Unprocessable Entity
-                    message: Your request was understood but could not be completed due to semantic errors
-                    details: An author with the same name already exists
-                  summary: Author exists
-        500:
-          $ref: "#/components/responses/500"
-    delete:
-      security:
-        - bearerAuth: []
-      tags:
-        - Authors
-      summary: Delete author (Admin only)
-      description: Deletes an existing author.
-      parameters:
-        - name: id
-          in: path
-          description: Author Id
-          schema:
-            type: string
-          required: true
-      responses:
-        204:
-          description: Author deleted successfully.
-        401:
-          $ref: "#/components/responses/401"
-        403:
-          $ref: "#/components/responses/403"
-        404:
-          $ref: "#/components/responses/404"
-        500:
-          $ref: "#/components/responses/500"
   /books:
     post:
       security:
@@ -538,24 +340,6 @@ components:
               description: A more specific human-readable error message together with some details
             - type: array
               description: An array with issues from multiple fields (e.g. input validation)
-    Author:
-      properties:
-        _id:
-          type: string
-        firstName:
-          type: string
-        lastName:
-          type: string
-        genres:
-          type: array
-          items:
-            type: string
-        createdAt:
-          type: string
-          format: date-time
-        updatedAt:
-          type: string
-          format: date-time
     Book:
       properties:
         _id:
